--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#db3236</color>
+    <color name="colorPrimaryDark">#ab1317</color>
+    <color name="colorAccent">#4885ed</color>
+    <color name="google_yellow">#f4c20d </color>
+    <color name="google_green">#3cba54</color>
+    <color name="white">#FFFF</color>
 </resources>
